--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="box2">
           <img
             id="sizes"
-            src="/images/image-qr-code.png"
+            src="images/image-qr-code.png"
             alt="image-qr-code.png"
           />
         </div>
